RESOLVED FIXED23871
Assertion failure beneath WebCore::openFunc when running http/tests/security/xss-DENIED-xsl-document-redirect.xml
https://bugs.webkit.org/show_bug.cgi?id=23871
Summary Assertion failure beneath WebCore::openFunc when running http/tests/security/...
Adam Roben (:aroben)
Reported 2009-02-10 10:46:34 PST
I'm getting an assertion failure when running http/tests/security/xss-DENIED-xsl-document-redirect.xml on Windows. And I have a fix!
Attachments
patch + changelog v1 (2.04 KB, patch)
2009-02-10 10:49 PST, Adam Roben (:aroben)
ap: review+
Adam Roben (:aroben)
Comment 1 2009-02-10 10:49:43 PST
Created attachment 27527 [details] patch + changelog v1
Alexey Proskuryakov
Comment 2 2009-02-10 11:36:14 PST
Comment on attachment 27527 [details] patch + changelog v1 r=me. I wonder why this didn't occur on Mac. Note to self: check if this fixes bug 6347 somehow :)
Adam Roben (:aroben)
Comment 3 2009-02-10 13:02:53 PST
(In reply to comment #2) > (From update of attachment 27527 [details] [review]) > r=me. I wonder why this didn't occur on Mac. I'm not sure. On Windows the URL being passed in was this: "file:///h:/cyghome/dev/Build_WebKit/bin/../etc/catalog", and m_string was this: "file:///h:/cyghome/dev/Build_WebKit/etc/catalog".
Adam Roben (:aroben)
Comment 4 2009-02-10 13:12:36 PST
Landed as r40831
Note You need to log in before you can comment on or make changes to this bug.