        Fix Bug 23871: Assertion failure beneath WebCore::openFunc when running http/tests/security/xss-DENIED-xsl-document-redirect.xml

<https://bugs.webkit.org/show_bug.cgi?id=23871>

        Reviewed by Alexey Proskuryakov.

        Covered by existing tests.

        * dom/XMLTokenizerLibxml2.cpp:
        (WebCore::openFunc): Use the two-parameter KURL constructor so that
        the string will be parsed. libxml2 gives us a UTF-8-encoded string
        that needs to be parsed.

Canonical link: https://commits.webkit.org/32957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40831 268f45cc-cd09-0410-ab3c-d52691b4dbfc